completes CSS box exercise

--- a/skeleton/assets/box_model.css
+++ b/skeleton/assets/box_model.css
@@ -4,6 +4,8 @@ body {
   /* If the user cannot load the Arial font, the sans-serif font is used */
   font-family: Arial, sans-serif;
   background-color: #FEFFF1;
+  width: 900px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -72,3 +74,52 @@ h2 + .user_review {
     border-top: 1px solid black;
 }
 
+nav {
+  display: inline-block;
+}
+
+nav li {
+  display: inline-block;
+}
+
+nav li a {
+  display: block;
+  padding: 20px;
+}
+
+.main {
+  width: 700px;
+  display: inline-block;
+}
+
+aside {
+  width: 180px;
+  margin-right: -6px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.ingredients-list li {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+input {
+  display: block;
+}
+
+#name {
+  width: 300px;
+}
+
+#expertise {
+  display: block;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  width: 300px;
+}
+
+#review {
+  display: block;
+  width: 300px;
+}
