--- a/w4d5/music_app/app/assets/stylesheets/base/layout.scss
+++ b/w4d5/music_app/app/assets/stylesheets/base/layout.scss
@@ -5,7 +5,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  border: 1px, solid, black;
+  border-bottom: 1px, solid, $gray;
   margin-bottom: 10px;
 }
 
@@ -13,7 +13,9 @@ header {
 header img {
   width: 80px;
   height: 80px;
+  display: block;
 }
+
 
 .btn,
 .btn>a:link,
