--- a/css-friends-01/skeleton/css/01-header.css
+++ b/css-friends-01/skeleton/css/01-header.css
@@ -8,6 +8,7 @@ body {
 }
 
 header {
+
   background-color: #f00;
   border-bottom: 1px solid #eee;
   color: #eee;
@@ -32,10 +33,14 @@ h1, li {
 
 a {
   display: block;
-  padding: 20px 15px;
+  padding: 15px 20px;
 
 }
 
 a:hover {
   background-color: black;
+}
+
+h1  {
+  font-weight: 700;
 }
