--- a/Setter/app/views/layouts/application.html.erb
+++ b/Setter/app/views/layouts/application.html.erb
@@ -8,6 +8,22 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <header>
+    <% if flash[:errors] %>
+      <% flash[:errors].each do |error| %>
+        <%= error %>
+      <% end %>
+    <% end %>
+
+    <% if logged_in? %>
+      <%= current_user.username %>
+      <%= button_to "Sign Out", session_url, method: :delete %>
+    <% else %>
+      <%= button_to "Link to Sign In", new_session_url, method: :get %>
+      <%= button_to "Link to Sign Up", new_user_url, method: :get %>
+    <% end %>
+  </header>
+
   <body>
     <%= yield %>
   </body>
