--- a/reddit/app/views/layouts/application.html.erb
+++ b/reddit/app/views/layouts/application.html.erb
@@ -9,6 +9,21 @@
   </head>
 
   <body>
+    <header>
+      <% if logged_in? %>
+        <%= current_user.username %>
+        <%= button_to "Log Out", session_url, method: :delete, class: 'btn' %>
+      <% else %>
+        <%= button_to "Sign In", new_session_url, method: :get, class: 'btn' %>
+        <%= button_to "Create New User", new_user_url, method: :get, class: 'btn' %>
+      <% end %>
+
+
+    </header>
+    <% flash[:errors].try(:each) do |error| %>
+    <li><%= error %></li>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
