--- a/reddit/app/assets/stylesheets/application.scss
+++ b/reddit/app/assets/stylesheets/application.scss
@@ -23,9 +23,10 @@
  @import "base/layout.scss";
 
  // Components
-/*@import "components/*";*/
+// @import "components/*";
 
  @import "./posts.scss";
  @import "./sessions.scss";
  @import "./subs.scss";
  @import "./users.scss";
+ @import "./comments.scss";
