--- a/reddit/app/views/layouts/application.html.erb
+++ b/reddit/app/views/layouts/application.html.erb
@@ -10,8 +10,14 @@
 
   <body>
     <header>
+
+      <nav>
+        <h1><a class="link" href="<%= subs_url %>">Reddit</a></h1>
+
+      </nav>
+
       <% if logged_in? %>
-        <%= current_user.username %>
+        <%= "Welcome #{current_user.username}" %>
         <%= button_to "Log Out", session_url, method: :delete, class: 'btn' %>
       <% else %>
         <%= button_to "Sign In", new_session_url, method: :get, class: 'btn' %>
@@ -20,10 +26,13 @@
 
 
     </header>
-    <% flash[:errors].try(:each) do |error| %>
-    <li><%= error %></li>
-    <% end %>
+    <main>
 
-    <%= yield %>
+      <% flash[:errors].try(:each) do |error| %>
+      <li><%= error %></li>
+      <% end %>
+
+      <%= yield %>
+  </main>
   </body>
 </html>
