--- a/reddit/app/views/subs/index.html.erb
+++ b/reddit/app/views/subs/index.html.erb
@@ -1,15 +1,20 @@
+<section class="index_page">
+
+
 <h1>Sub Topics</h1>
 
-<ul>
+<ul class="index">
   <% @subs.each do |sub| %>
   <li>
-    <%= sub.title %>
+    <%= link_to sub.title, sub_url(sub), method: :get, class: 'btn' %>
     <%= sub.description %>
     <%= button_to "Edit Sub", edit_sub_url(sub), method: :get, class: 'btn' %>
     <!-- <%#= button_to "Remove Sub", sub_url(sub), method: :delete %> -->
   </li>
   <% end %>
 </ul>
+
+</section>
 
 <%= button_to "Add New Sub-Topic", new_sub_url, method: :get, class: 'btn' %>
 <%= button_to "Add New Post", new_post_url, method: :get, class: 'btn' %>
