--- a/reddit/app/views/subs/show.html.erb
+++ b/reddit/app/views/subs/show.html.erb
@@ -1,16 +1,23 @@
 <h1><%= @sub.title %></h1>
 <p><%= @sub.description %></p>
 
-<ul>
+<% if current_user.moderator %>
+  <%= button_to "Edit Sub", edit_sub_url(@sub), method: :get %>
+<% end %>
+
+<ul class="post_index">
   <% @sub.posts.each do |post| %>
   <li>
-    <%= post.title %>
-    <%= post.url %>
-    <%= post.content %>
-    <%= "Author: #{post.author.username}" %>
+    <strong>Title: <%= link_to post.title, post_url(post),  method: :get, class: 'link' %></strong>
+    
+    URL: <%= post.url %>
+    Content: <%= post.content %>
+    Author: <%= post.author.username %>
+
   </li>
   <% end %>
 </ul>
 
-
+<br>
+<br>
 <%= button_to "Sub Topics", subs_url, class: 'btn', method: :get%>
