--- a/w6d5/widgets/index.css
+++ b/w6d5/widgets/index.css
@@ -1,8 +1,13 @@
+.widgets {
+  width: 500px;
+  margin: auto;
+}
+
 .clock {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  width: 500px;
-  margin: auto;
+  /*width: 500px;
+  margin: auto;*/
   box-sizing: border-box;
   /*display: flex;*/
 }
@@ -13,7 +18,6 @@
 
 .clock-box {
   color: white;
-
   padding: 20px;
   background: blue;
   border: 1px solid black;
@@ -27,4 +31,60 @@
 
 .clock-time h1, .clock-date h1 {
   margin: 0;
+}
+
+.tab-titles {
+  font-family: sans-serif;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.tab{
+  font-size: 20px;
+  width: 33.3333%;
+  border: 1px solid black;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  font-weight: normal;
+  display: block;
+  margin-bottom: 0;
+  margin-top: 0;
+  background: lightblue;
+  text-align: center;
+}
+
+.tab:hover {
+  background: #8ac9dd;
+}
+
+.tab-selected {
+  font-weight: bold;
+  border-bottom: none;
+}
+
+.tab-widget {
+  width: 150px;
+}
+
+.tab-content {
+  width: 100%;
+  height: 150px;
+  border: 1px solid black;
+  border-top: none;
+  margin-top: 0;
+  box-sizing: border-box;
+  background: lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tab-content p {
+  margin-top: 0;
+}
+
+.tab-widget-title>h1 {
+  margin-bottom: 0;
+  margin-top: 30px;
 }
